k8s/apps/dozzle/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dozzle-service
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: dozzle
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
