k8s/apps/dozzle/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-forward-auth
  namespace: monitoring
spec:
  forwardAuth:
    address: http://authentik-server.apps-authentik.svc.cluster.local
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dozzle-ingress
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-authentik-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dozzle.xinfra.ru
      secretName: wildcard-xinfra-ru-tls
  rules:
    - host: dozzle.xinfra.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dozzle-service
                port:
                  number: 8080
