k8s/apps/dozzle/setup.yaml
---
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dozzle
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: dozzle
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dozzle
    spec:
      serviceAccountName: pod-viewer
      containers:
        - name: dozzle
          image: amir20/dozzle:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: dozzle-data

---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dozzle-service
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: dozzle
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP

---
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dozzle-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - dozzle.xinfra.ru
      secretName: wildcard-xinfra-ru-tls
  rules:
    - host: dozzle.xinfra.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dozzle-service
                port:
                  number: 8080
